K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registration-service
                port:
                  number: 8081
          - path: /phpmyadmin
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 8080
